WebPageWin.cpp and WebProcessWin.cpp refer header files for WebCore with an incorrect include style, which should be <WebCore/xxxx.h>. In this ticket, styles to include the following header are fixed. For WebPageWin.cpp: - NotImplemented.h - WindowsKeyboardCodes.h For WebProcessWin.cpp: - SharedBuffer.h
Created attachment 334265 [details] Patch
Comment on attachment 334265 [details] Patch Rejecting attachment 334265 [details] from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-02', 'land-attachment', '--force-clean', '--non-interactive', '--parent-command=commit-queue', 334265, '--port=mac']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Last 500 characters of output: rdparty/autoinstalled/mechanize/_urllib2_fork.py", line 332, in _call_chain result = func(*args) File "/Volumes/Data/EWS/WebKit/Tools/Scripts/webkitpy/thirdparty/autoinstalled/mechanize/_urllib2_fork.py", line 1170, in https_open return self.do_open(conn_factory, req) File "/Volumes/Data/EWS/WebKit/Tools/Scripts/webkitpy/thirdparty/autoinstalled/mechanize/_urllib2_fork.py", line 1118, in do_open raise URLError(err) urllib2.URLError: <urlopen error [Errno 60] Operation timed out> Full output: http://webkit-queues.webkit.org/results/6593997
Comment on attachment 334265 [details] Patch Clearing flags on attachment: 334265 Committed r228929: <https://trac.webkit.org/changeset/228929>
All reviewed patches have been landed. Closing bug.
<rdar://problem/37796359>