[WinCairo] Fix compile errors in WebPageWin.cpp and WebProcessWin.cpp due to WebCore forwarding header paths https://bugs.webkit.org/show_bug.cgi?id=182969

Patch by Yousuke Kimoto <yousuke.kimoto@sony.com> on 2018-02-22
Reviewed by Konstantin Tokarev.

* WebProcess/WebPage/win/WebPageWin.cpp:
* WebProcess/win/WebProcessWin.cpp:

Canonical link: https://commits.webkit.org/198798@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@228929 268f45cc-cd09-0410-ab3c-d52691b4dbfc